--- a/block-BHaaaf/index.html
+++ b/block-BHaaaf/index.html
@@ -1,9 +1,21 @@
-<!-- 
-  ### Create a simple page with an external stylesheet.
+<!DOCTYPE html>
+<html lang="en">
 
-  TODO:
-    - Create a simple page `(index.html)` with one heading following with a long paragraph.
-    - Create an external stylesheet `(style.css)` and change the color and font size of the heading and paragraph.
-    - Also, change the background color of the body.
-    - Use different selectors to select different elements.
--->
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <title>INDEX</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+  <h1>HEADING</h1>
+  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+    Amet, nisi sequi. Officia, voluptatem sed ex deleniti eligendi laborum quasi sapiente! 
+    Animi neque dolorum veritatis delectus adipisci voluptates, asperiores explicabo dolore!
+  </p>
+</body>
+
+</html>
