--- a/block-BHaaaf/index.html
+++ b/block-BHaaaf/index.html
@@ -3,16 +3,16 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ 
+  
   
   <title>INDEX</title>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css"/>
 </head>
 
 <body>
-  <h1>HEADING</h1>
-  <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
+  <h1 class="heading">HEADING</h1>
+  <p id="unique">Lorem ipsum, dolor sit amet consectetur adipisicing elit. 
     Amet, nisi sequi. Officia, voluptatem sed ex deleniti eligendi laborum quasi sapiente! 
     Animi neque dolorum veritatis delectus adipisci voluptates, asperiores explicabo dolore!
   </p>
