2nd HTML and CSS assignment

--- a/block-BHaaag/index.html
+++ b/block-BHaaag/index.html
@@ -1,18 +1,49 @@
-<!-- 
-  ### Create a page according to the design shown below.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Resume</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+ <h1 class="white"><b>Peter Mullins</b></h1>  
+ <p> peter.mullins@email.com / Rochester, New York</p>
+ <h2>Experience</h2>
+ <h3 class="white" style="font-size: 20px;"><b>Senior Front End developer</b></h3>
+ <p class="white">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+    Sunt officiis iure aspernatur nesciunt saepe! Numquam exercitationem est eaque.
+    Necessitatibus asperiores non repudiandae id ullam debitis adipisci natus perferendis rerum est!
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non totam porro nobis maiores sunt provident voluptatum. 
+    Ab expedita maiores, aperiam fugit optio itaque assumenda incidunt, ad porro reiciendis, a similique!
+ </p>
+ <h3 class="white" style="font-size: 20px;"><b>Front End developer</b></h3>
+ <p class="white">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+    Sunt officiis iure aspernatur nesciunt saepe! Numquam exercitationem est eaque.
+    Necessitatibus asperiores non repudiandae id ullam debitis adipisci natus perferendis rerum est!
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non totam porro nobis maiores sunt provident voluptatum. 
+    Ab expedita maiores, aperiam fugit optio itaque assumenda incidunt, ad porro reiciendis, a similique!
+ </p>
+ <h3 class="white" style="font-size: 18px;"> Front End developer Intern</h3>
+ <p class="white">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+    Sunt officiis iure aspernatur nesciunt saepe! Numquam exercitationem est eaque.
+    Necessitatibus asperiores non repudiandae id ullam debitis adipisci natus perferendis rerum est!
+    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non totam porro nobis maiores sunt provident voluptatum. 
+    Ab expedita maiores, aperiam fugit optio itaque assumenda incidunt, ad porro reiciendis, a similique!
+ </p>
+<h2><b>Skills</b></h2> 
+ <p>HTML</p>
+ <p>CSS</p>
+ <p>JavaScript</p>
+ <p>React</p>
+ <p>PhotoShop</p>
+ <p>Illustrator</p>
 
-  TODO:
-    - Open this image in a window for the design layout - (https://raw.githubusercontent.com/suraj122/AC-STYLE-images/master/introduction/assignment1.png)
-    - Use external stylesheet to style the page.
-    - For different level of heading use different heading elements. We have Six level of heading elements:
-      - `<h1></h1>`
-      - `<h2></h2>`
-      - `<h3></h3>`
-      - `<h4></h4>`
-      - `<h5></h5>`
-      - `<h6></h6>`
-
-    - Wrap the text or word inside `<strong></strong> or <b></b>` tag to make it bold.
-    - Wrap the text or word inside `<em></em> or <i></i>` tag to make it italicize.
-    - Use `<address></address>` tag for addresses. 
--->
+ <h2><b>Connect</b></h2>
+ <address>
+  <a href="twitter.com" style="color: red;">Twitter </a> &nbsp;
+  <a href="linkedin.com" style="color: red;">LInkedin </a> &nbsp;
+  <a href="instagram.com" style="color: red;">Instagram </a> &nbsp;
+  <a href="facebook.com>" style="color: red;">Facebook </a> &nbsp;
+</address>
+</body>
+</html>
