--- a/block-BHaaag/index.html
+++ b/block-BHaaag/index.html
@@ -6,30 +6,68 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <h1 class="white"><b>Peter Mullins</b></h1>  
+  
+ <h1><b>Peter Mullins</b></h1>  
  <p> peter.mullins@email.com / Rochester, New York</p>
+ <section>
  <h2>Experience</h2>
- <h3 class="white" style="font-size: 20px;"><b>Senior Front End developer</b></h3>
- <p class="white">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-    Sunt officiis iure aspernatur nesciunt saepe! Numquam exercitationem est eaque.
-    Necessitatibus asperiores non repudiandae id ullam debitis adipisci natus perferendis rerum est!
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non totam porro nobis maiores sunt provident voluptatum. 
-    Ab expedita maiores, aperiam fugit optio itaque assumenda incidunt, ad porro reiciendis, a similique!
+
+ <h3><b>Senior Front End developer</b></h3>
+ <p>
+   Design web applications according to client briefs and modity designs to meet changes in client specifications.
+  </p>
+  <p>
+    Develop web products by coding wireframes into elements that users can interact with.
+  </p>
+  <p>
+    Work in a team of web designers, back end developers and UX designers to meet project goals and create effective user experiences with digital
+    products.
+  </p>
+  <p>
+    Use skills in debugging to check code, improve code and enhance the functionality and user experience of web applications and computer
+    programs.
+  </p>
+  <p>
+    Supervise junior developers, provide training and motivate team members.
+    <p>
+   <p> 
+     Created several successful web campaigns that won awards in 2018.
+    </p>
+
+ <h3><b>Front End developer</b></h3>
+
+ <p>
+   Collaborated with web designers, back end developers and UX designers to design, build, test and improve web products.
  </p>
- <h3 class="white" style="font-size: 20px;"><b>Front End developer</b></h3>
- <p class="white">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-    Sunt officiis iure aspernatur nesciunt saepe! Numquam exercitationem est eaque.
-    Necessitatibus asperiores non repudiandae id ullam debitis adipisci natus perferendis rerum est!
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non totam porro nobis maiores sunt provident voluptatum. 
-    Ab expedita maiores, aperiam fugit optio itaque assumenda incidunt, ad porro reiciendis, a similique!
+ <p> 
+   Added to the company database of code by developing reusable code that could minimize the time needed to complete projects in the future
  </p>
- <h3 class="white" style="font-size: 18px;"> Front End developer Intern</h3>
- <p class="white">Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-    Sunt officiis iure aspernatur nesciunt saepe! Numquam exercitationem est eaque.
-    Necessitatibus asperiores non repudiandae id ullam debitis adipisci natus perferendis rerum est!
-    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non totam porro nobis maiores sunt provident voluptatum. 
-    Ab expedita maiores, aperiam fugit optio itaque assumenda incidunt, ad porro reiciendis, a similique!
+ <p>
+   Ensured scalability of front end elements by optimizing them for loading speed and performance.
  </p>
+ <p>
+   Assisted in the training of new developers and web designers.
+ </p>
+  <p>Worked with teams of IT professionals to meet team goals and business objectivesAvery Web Products</p>
+
+ <h3> Front End developer Intern</h3>
+
+  <p>
+   Developed code to convert design wireframes into website elements under supervision.
+  </p>
+  <p>
+    Used frameworks for front end development such as React and Ember, design software such as Photoshop and Dreamweaver and programming
+  languages such as HTML and Javašcript.
+  </p>
+  <p>
+    Assisted senior Front End Developers in designing web applications and gained skills in aligning designs with client requirements.
+  </p>
+  <p> Gained experience in resolving conflicts with colleagues professionally.</p>
+  <p>Learned to interact with clients, present designs and handle feedback on work.</p>
+  </p>
+</section>
+ 
+ <section>
 <h2><b>Skills</b></h2> 
  <p>HTML</p>
  <p>CSS</p>
@@ -37,13 +75,15 @@
  <p>React</p>
  <p>PhotoShop</p>
  <p>Illustrator</p>
+ </section>
 
- <h2><b>Connect</b></h2>
- <address>
-  <a href="twitter.com" style="color: red;">Twitter </a> &nbsp;
-  <a href="linkedin.com" style="color: red;">LInkedin </a> &nbsp;
-  <a href="instagram.com" style="color: red;">Instagram </a> &nbsp;
-  <a href="facebook.com>" style="color: red;">Facebook </a> &nbsp;
-</address>
+ <section>
+ <footer><h2><b>Connect</b></h2></footer>
+ 
+  <a href="#" >Twitter </a> &nbsp;
+  <a href="#">LInkedin </a> &nbsp;
+  <a href="#" >Instagram </a> &nbsp;
+  <a href="#" >Facebook </a> &nbsp;
+ </section>
 </body>
 </html>
