--- a/block-BHaaai/index.html
+++ b/block-BHaaai/index.html
@@ -1,12 +1,74 @@
-<!-- 
-  ### Create a page according to the design shown below.
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Resume</title>
+  <link rel="stylesheet" href="style.css">
+</head>
+<body>
+  
+    <img src="petermullins.jpg" alt="petermullins" class="center" width="200px" height="200px" class="center">
+    <h1 class="center">Peter mullins</h1>
+    <p  class="center">peter.mullins@email.com Rochester, New York</p>
+  <section>
+    <h2>Experience</h2>
+    <h3>Senior Front End Developer</h3>
+    <p>
+      Design web applications according to client briefs and modify designs to meet changes in client specifications.
+    </p>
+   <p>Develop web products by coding wireframes into elements that users can interact with.</p>
+  <p>Work in a team of web designers, back end developers and UX designers to meet project goals and create effective user experien ces with digital
+    products.</p>
+<p>Use skills in debugging to check code, improve code and enhance the functionality and user experience of web applications and computer
+programs.</p>
+<p>Supervise junior developers, provide training and motivate team members.</p>
+  <p>
+  Created several successful web campaigns that won awards in 2018.
+  </p>
 
-  TODO:
-    - Open this image in a window for the design layout - (https://raw.githubusercontent.com/suraj122/AC-STYLE-images/master/introduction/assignment2.png)
-    - Use external stylesheet to style the page.
-    - For applying image use `<img src="" alt="">` tag. 
-      Keep source of the image inside `src=""` attribute. 
-      Put an alternative text of the image inside `alt=""` attribute. 
-      You can can also apply width and height to the image by applying `width="" and height=""` attribute inside image tag. for example - `<img src="suraj.jpg" alt="suraj" width="200" height="200">`
-    - For centering the element apply `text-align: center`, to the parent of the element in CSS. 
--->
+  <h3>Front End Developer</h3>
+  <p>
+    Collaborated with web designers, back end developers and UX designers to design, build, test and improve web products.
+  </p>
+  <p>
+    Added to the company database of code by developing reusable code that could minimize the time needed to complete projects in the future.
+  </p>
+  <p>Ensured scalability of front end elements by optimizing them for loading speed and performance.</p>
+  <p>Assisted in the training of new developers and web designers.</p>
+  <p> 
+  Worked with teams of IT professionals to meet team goals and business objectivesAvery Web Products.
+  </p>
+
+  <h3>Front End Developer Intern</h3>
+  <p>Developed code to convert design wireframes into website elements under supervision.</p>
+  <p> Used frameworks for front end development such as React and Ember, design software such as Photoshop and Dreamweaver and programming
+    languages such as HTML and JavaScript.</p>
+   <p>Assisted senior Front End Developers in designing web applications and gained skills in aligning designs with client requirements.</p>
+   <p> Gained experience in resolving conflicts with colleagues professionally.</p>
+    <p>Learned to interact with clients, present designs and handle feedback on work.</p>
+
+ </section>
+
+ <section>
+   <h2>Skills</h2>
+   <p>HTML</p>
+   <p>CSS</p>
+   <p>JavaScript</p>
+   <p>React</p>
+   <p>PhotoShop</p>
+   <p>Illustrator</p>
+  </section>
+
+  <footer class="center" >
+    <a href="#">Twitter</a>
+    <a href="#">LinkedIn</a>
+    <a href="#">Instagram</a>
+    <a href="#">Facebook</a>
+  </footer>
+  
+
+  
+</body>
+</html>
