corrections made in assignment 3

--- a/block-BHaaai/index.html
+++ b/block-BHaaai/index.html
@@ -8,10 +8,11 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
-    <img src="petermullins.jpg" alt="petermullins" class="center" width="200px" height="200px" class="center">
-    <h1 class="center">Peter mullins</h1>
-    <p  class="center">peter.mullins@email.com Rochester, New York</p>
+  <header>
+    <img src="petermullins.jpg" alt="petermullins" width="200px" height="200px">
+    <h1>Peter mullins</h1>
+    <p>peter.mullins@email.com Rochester, New York</p>
+  </header>
   <section>
     <h2>Experience</h2>
     <h3>Senior Front End Developer</h3>
@@ -61,7 +62,7 @@ programs.</p>
    <p>Illustrator</p>
   </section>
 
-  <footer class="center" >
+  <footer >
     <a href="#">Twitter</a>
     <a href="#">LinkedIn</a>
     <a href="#">Instagram</a>
